# Telegram_bot

./: .breakpoints  .env1  .gitignore  pyproject.toml  replit_zip_error_log.txt
.cache/pypoetry/artifacts/0f/8d/36/b447bb229c4b86d3e5a6408067420ac66e3abe12b4e815ebd59e87e904/: utils-1.0.2-py2.py3-none-any.whl
.cache/pypoetry/artifacts/70/9e/50/f46afa21b2c839412b2df5fa526b551d849f8fd0a9ad1ac264974dd090/: data-0.4-py3-none-any.whl
.cache/pypoetry/artifacts/96/09/f7/f24c63c9055e69984ae423003f0b7d1196c2d1803dcc06d354f2809f37/: django_handler-1.0-py3-none-any.whl
.cache/pypoetry/artifacts/e3/ee/9b/6e82214c5be544738a2250c896d7673aefaa9fc28548e9767ce1099997/: loader-2017.9.11-py3-none-any.whl
.cache/pypoetry/artifacts/f8/a1/5e/2a3f3e081c87fdb6db7cb7282e038f0be9010cb5a78efcd39b10e4fc43/: bs4-0.0.1-py3-none-any.whl
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.3.1-py3-none-any/pip-23.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-69.0.2-py3-none-any/setuptools-69.0.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.42.0-py3-none-any/wheel-0.42.0.dist-info/: RECORD
.upm/: store.json
data/: .env  config.py
handlers/users/: __init__.py  back.py  callhandler.py  entry.py  menukey.py  start.py
keyboards/Questions/: beginner.py
keyboards/default/: __init__.py  back.py  menukey.py  savollarkey.py
keyboards/inline/: __init__.py  questions.py
